--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -63,7 +63,7 @@ a {
 }
 
 a:hover {
-  color: var(--main-color);
+  color:black;
 }
 
 button {
@@ -188,4 +188,55 @@ input:focus {
 .btn.btn-add :hover {
   background-color: var(--main-color);
   color: #fff;
+}
+
+iframe {
+  border: none;
+  font-family: Arial, sans-serif;
+  color: #333;
+  margin: 0 auto;
+}
+
+.form_media-recors {
+  margin-left: 10px;
+}
+
+.analytic_cbb{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.ant-table {
+  border: 1px solid #e8e8e8;
+  margin: 0 auto;
+  font-size: 14px;
+}
+
+.ant-table-thead > tr > th {
+  background: #fafafa;
+  font-weight: 600;
+}
+
+.ant-table-tbody > tr > td {
+  border: 1px solid #e8e8e8;
+}
+
+.ant-table-tbody > tr:hover > td{
+  background-color: var(--main-color) !important;
+  color: white;
+  transition: all 0.2s ease-in-out;
+}
+
+.date_picker{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.loading{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
