--- a/src/component/sidebar/sidebar.css
+++ b/src/component/sidebar/sidebar.css
@@ -59,3 +59,16 @@
     );
     color:var(--txt-white)
 }
+
+@media screen and (max-width: 768px) {
+    .sidebar {
+      display: none;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .sidebar {
+      display: block;
+      width: 200px;
+    }
+  }
