--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -245,3 +245,7 @@ iframe {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.selected-row-rowStyle {
+  background-color: #2ae9e6 !important;
+}
